# Job-Scrapper

./: .gitignore  export.py  indeed.py  jobs.csv  main.py  pyproject.toml  requirements.txt  server.py  stackoverflow.py
job_scrapper/: manage.py  requirements.txt
job_scrapper/job_scrapper/: asgi.py  settings.py  urls.py  wsgi.py
job_scrapper/search/: admin.py  models.py  urls.py  views.py
job_scrapper/search/migrations/: 0001_initial.py  0002_alter_joblist_date_alter_joblist_location.py
job_scrapper/static/css/: mystyle.css
job_scrapper/templates/search/: index.html  result.html
job_scrapper/utils/: indeed.py  main.py  tocsv.py
templates/: main.html  search.html
