[tool.poetry]
name = "job-scrapper"
version = "0.1.0"
description = ""
authors = ["youngjuncho729 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
